# bot2

./: .pre-commit-config.yaml  Dockerfile  config.py  main.py  pyproject.toml  run.sh  sample.env
.github/: dependabot.yml
.github/workflows/: docker.yml
bot/: client.py
bot/utils/: __init__.py  cache.py  db.py  logger.py  misc.py
fsub/: __init__.py  __main__.py  client.py  config.py  logger.py
fsub/plugins/: __init__.py  batch.py  broadcast.py  configs.py  debug.py  generate.py  helpers.py  start.py
fsub/utils/: __init__.py  cache.py  db.py  misc.py
plugins/: __init__.py  batch.py  broadcast.py  configs.py  debug.py  generate.py  helpers.py  start.py
